versions/v0.16/modules/en/pages/how-tos-for-operators/installation.adoc
:doctype: book

= Installation Details
:revdate: 2025-07-23
:page-revdate: {revdate}
:page-aliases: /installation

{product_name}  can be installed in two modes: *single-cluster* and *multi-cluster*.

* **Single-cluster install**: Recommended for getting started. This mode runs both the Fleet manager and agent on the same cluster.  
* **Multi-cluster install**: Used to manage multiple downstream clusters from a central manager.

image::single-cluster.png[Static, 600]

In the single-cluster setup, the same cluster runs both the Fleet manager and the Fleet agent.  
The cluster connects directly to the Git server to deploy resources locally.  
This is a simple, production-supported setup ideal for development, testing, and small-scale use.

[#_prerequisites]
== Prerequisites

[#_helm_3]
=== Helm 3

Fleet is distributed as a Helm chart. Helm 3 is a client-only CLI with no server-side component.  
To install Helm 3, follow the official instructions at https://helm.sh/docs/intro/install[Helm installation guide].

[#_kubernetes]
=== Kubernetes

{product_name} runs as a controller on an existing Kubernetes cluster.  
For a single-cluster setup, install {product_name} on the same cluster that you intend to manage with GitOps.  
{product_name} supports any community-supported Kubernetes version, typically {versions.next.kubernetes} or later.

[#_default_installation]
== Default Installation

Install the following Helm charts to set up {product_name}.

[CAUTION]
====
{product_name} in Rancher  
Rancher includes separate Helm charts for {product_name} and uses a different repository.
====

. Add the Fleet Helm repository
+
[source,bash]
----
helm repo add fleet https://rancher.github.io/fleet-helm-charts/
----
+
. Install the Fleet `CustomResourceDefinitions``
+
[source,bash]
----
helm -n cattle-fleet-system install --create-namespace --wait fleet-crd \
    fleet/fleet-crd
----
+
. Install the Fleet controllers
[source,bash]
----
helm -n cattle-fleet-system install --create-namespace --wait fleet \
    fleet/fleet
----

[#_verify_the_installation]
=== Verify the installation

Run the following commands to verify that the {product_name} controller pods are running:

[source,bash]
----
kubectl -n cattle-fleet-system logs -l app=fleet-controller
kubectl -n cattle-fleet-system get pods -l app=fleet-controller
----

Example output:

[source,console]
----
NAME                                READY   STATUS    RESTARTS   AGE
fleet-controller-64f49d756b-n57wq   1/1     Running   0          3m21s
----

You can now xref:how-tos-for-users/gitrepo-add.adoc[register Git repositories] in the `fleet-local` namespace to start deploying resources.

[#_tweaking_your_productname_installation]
== Tweaking Your {product_name} Installation

[#_controller_and_agent_replicas]
=== Controller and Agent Replicas

Starting with {product_name} v0.13, the Helm chart exposes replica count settings for each controller type and the agent:

* `controller.replicas` : Controls `fleet-controller` pods managing bundles, clusters, and groups.  
* `gitjob.replicas` : Controls GitOps `GitRepo` reconciliation.  
* `helmops.replicas` : Controls the experimental HelmOps controller.  
* `agent.replicas` : Controls the Fleet agent.

Each defaults to one replica.


[#_enabling_imagescan]
=== Enabling imagescan

The xref:how-tos-for-users/imagescan.adoc[imagescan] feature is disabled by default, meaning that:

* non-empty `imageScans` blocks in your `fleet.yaml` or equivalent config files will lead to bundle creation errors,
  visible in your GitRepo's status.
* the imagescan controller will not run, hence repositories referenced in `imageScan` blocks of `fleet.yaml` or
  equivalent config files will not be monitored for newer images. This also means that image tags referenced in your
  manifests with annotations such as `image: <image>:<tag> # {"$imagescan": "test-scan"}` will not be expanded.

To remedy this, install Fleet with `--set imagescan.enabled=true`.

[#_disabling_the_local_cluster_agent]
=== Disabling the Local Cluster Agent

By default, {product_name} deploys an agent on the management (local) cluster so that it can receive GitOps deployments just like any downstream cluster.
If you want to use the management cluster exclusively as a control plane and prevent workloads from being deployed onto it, you can disable the local agent.

When the local agent is disabled:

* The local `Cluster` and `ClusterGroup` resources remain registered.
* The `fleet-agent` is **not** deployed on the management cluster. If an agent is already running, it will be removed.
* The local cluster will not receive any bundle deployments.

To disable the local agent at installation time:

[source,bash]
----
helm -n cattle-fleet-system install --create-namespace --wait fleet fleet/fleet \
  --set bootstrap.localAgentDisabled=true
----

To disable it on an existing installation, upgrade the chart:

[source,bash]
----
helm -n cattle-fleet-system upgrade fleet fleet/fleet \
  --set bootstrap.localAgentDisabled=true
----

To re-enable the local agent, set the value back to `false` (the default):

[source,bash]
----
helm -n cattle-fleet-system upgrade fleet fleet/fleet \
  --set bootstrap.localAgentDisabled=false
----

[#_additional_ssh_known_hosts]
=== Additional SSH known hosts

When interacting with git repositories through SSH, strict host key checks are enabled by default, meaning that
{product_name} will reject SSH connection attempts to hosts for which no `known_hosts` entry exists.

More information, refer to xref:how-tos-for-users/gitrepo-add.adoc#_strict_host_key_checks[strict host key checks].

By default, Fleet installs `known_hosts` entries for a few widely used git hosting providers.

Host key fingerprints added to the config map are sourced, respectively:

* from link:https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/githubs-ssh-key-fingerprints[GitHub SSH key fingerpints] for
Github
* from link:https://docs.gitlab.com/ee/user/gitlab_com/index.html#ssh-known_hosts-entries[SSH known host entries] for Gitlab
* from link:https://support.atlassian.com/bitbucket-cloud/docs/configure-ssh-and-two-step-verification[configure SSH and two step verification] for
Bitbucket, which also provides a `curl` command to fetch them in `known_hosts`-friendly format: `curl
https://bitbucket.org/site/ssh`
* from link:https://learn.microsoft.com/en-us/azure/devops/repos/git/use-ssh-keys-to-authenticate?view=azure-devops[Use SSH keys to authenticate]
for Azure DevOps

However, when using a different git hosting setup, such as private servers hosted by yourself or your company, entries
for those servers can be added to Fleet at installation time using the `additionalKnownHosts` Helm value, which supports
an array of strings.
Each element of that array would be an additional entry, e.g.:

[source,bash]
----
helm -n cattle-fleet-system install --create-namespace --wait fleet fleet/fleet \
  --set additionalKnownHosts={'ourgitserver.company ssh-rsa <fingerprint>','our-other-git-server.company ssh-ed25519 <fingerprint2>'}
----

[#_multi_controller_installation_sharding]
== Multi-Controller Installation: Sharding

[#_deployment]
=== Deployment

From version 0.10 onward, {product_name} supports static sharding.  
Each shard is defined by a unique shard ID.  
You can optionally assign a https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#nodeselector[node selector] so all controller pods for that shard run on specific nodes.

Install {product_name} with the following Helm options:

* `--set shards[$index].id=$shard_id`
* `--set shards[$index].nodeSelector.$key=$value`

Example:

[source,bash]
----
helm -n cattle-fleet-system install --create-namespace --wait fleet fleet/fleet \
  --set shards[0].id=foo \
  --set shards[0].nodeSelector."kubernetes\.io/hostname"=k3d-upstream-server-0 \
  --set shards[1].id=bar \
  --set shards[1].nodeSelector."kubernetes\.io/hostname"=k3d-upstream-server-1 \
  --set shards[2].id=baz \
  --set shards[2].nodeSelector."kubernetes\.io/hostname"=k3d-upstream-server-2
----

Verify {product_name} controllers and GitJob pods:

[source,bash]
----
kubectl -n cattle-fleet-system get pods -l app=fleet-controller \
  -o=custom-columns='Name:.metadata.name,Shard-ID:.metadata.labels.fleet\.cattle\.io/shard-id,Node:spec.nodeName'
----

[source,console]
----
Name                                          Shard-ID   Node
fleet-controller-b4c469c85-rj2q8                         k3d-upstream-server-2
fleet-controller-shard-bar-5f5999958f-nt4bm   bar        k3d-upstream-server-1
fleet-controller-shard-baz-75c8587898-2wkk9   baz        k3d-upstream-server-2
fleet-controller-shard-foo-55478fb9d8-42q2f   foo        k3d-upstream-server-0
----

Similarly for GitJob pods:

[source,bash]
----
kubectl -n cattle-fleet-system get pods -l app=gitjob \
  -o=custom-columns='Name:.metadata.name,Shard-ID:.metadata.labels.fleet\.cattle\.io/shard-id,Node:spec.nodeName'
----

[#_how_it_works]
=== How It Works

Each Fleet controller processes resources labeled with its shard ID.  
The unsharded controller handles all resources without a shard ID.

To deploy a GitRepo to a specific shard, add the label `fleet.cattle.io/shard-ref` to the resource.

Example:

[source,yaml]
----
apiVersion: fleet.cattle.io/v1alpha1
kind: GitRepo
metadata:
  name: sharding-test
  labels:
    fleet.cattle.io/shard-ref: foo
spec:
  repo: https://github.com/rancher/fleet-examples
  paths:
  - single-cluster/helm
----

A GitRepo with a known shard ID (for example, `foo`) is processed by that controller.  
Unknown shard IDs (for example, `boo`) are ignored.

To add or remove shards, redeploy {product_name} with an updated shard list.

[#_node_selectors]
== Node Selectors

Fleet charts can be configured to run controllers and agents on specific cluster nodes, using the `nodeSelector` Helm
value, found at:
* `nodeSelector` in the `fleet` chart
* `fleetAgent.nodeSelector` in the `fleet-agent` chart

Fleet agents are not affected by sharding; however, controllers may also receive node selectors from sharding
configuration.

In case both global and sharded node selectors are provided, both will be applied to Fleet controller deployments. No
checks are run for overlaps or conflicting node selectors between both sources.

Git jobs created by the gitOps controller to update workloads from GitRepo resources will inherit the `fleet-controller`
deployment's node selectors.

[#_configuration_for_multi_cluster]
== Configuration for Multi-Cluster

[CAUTION]
====
Downstream clusters in Rancher are automatically registered in {product_name}.  
The setup below applies only to standalone {product_name} and is not QA-tested by Rancher.
====

[NOTE]
====
The installation steps are identical to a single-cluster setup.  
After installing the Fleet manager, register remote clusters manually.  
For manager-initiated registration, additional API server details are required.  
Without them, only agent-initiated registration is possible.
====

[#_api_server_url_and_ca_certificate]
=== API Server URL and CA Certificate

The Fleet manager requires access to the Kubernetes API server.  
Agents use the API server URL and CA certificate to communicate securely.

Obtain these values from your kubeconfig file (`$HOME/.kube/config`):

[source,yaml]
----
apiVersion: v1
clusters:
- cluster:
    certificate-authority-data: LS0tLS1CRUdJTi...
    server: https://example.com:6443
----

==== Extract CA Certificate

The `certificate-authority-data` field is Base64 encoded.  
Decode it and save to a file:

[source,bash]
----
base64 -d encoded-file > ca.pem
----

Use this command to extract all CAs:

[source,bash]
----
kubectl config view -o json --raw | jq -r '.clusters[].cluster["certificate-authority-data"]' | base64 -d > ca.pem
----

For multi-cluster kubeconfigs:

[source,bash]
----
kubectl config view -o json --raw | jq -r '.clusters[] | select(.name=="CLUSTERNAME").cluster["certificate-authority-data"]' | base64 -d > ca.pem
----

==== Extract API Server

[source,bash]
----
API_SERVER_URL=$(kubectl config view -o json --raw | jq -r '.clusters[] | select(.name=="CLUSTER").cluster["server"]')
API_SERVER_CA="ca.pem"
----

==== Validate

Verify the API server URL:

[source,bash]
----
curl -fLk "$API_SERVER_URL/version"
----

Expected output: JSON version info or a `401 Unauthorized` error.

Then validate the CA certificate:

[source,bash]
----
curl -fL --cacert "$API_SERVER_CA" "$API_SERVER_URL/version"
----

You should see valid JSON or a `401 Unauthorized` message.  
If you get an SSL error, the CA file is incorrect.

Example CA file (`ca.pem`):

[source,pem]
----
-----BEGIN CERTIFICATE-----
MIIBVjCB/qADAgECAgEAMAoGCCqGSM49BAMCMCMxITAfBgNVBAMMGGszcy1zZXJ2
ZXItY2FAMTU5ODM5MDQ0NzAeFw0yMDA4MjUyMTIwNDdaFw0zMDA4MjMyMTIwNDda
...
-----END CERTIFICATE-----
----

[#_install_for_multi_cluster]
=== Install for Multi-Cluster

Assume the API server URL is `https://example.com:6443` and CA is in `ca.pem`.  
If your API server uses a well-known CA, omit the CA parameter.

[source,bash]
----
API_SERVER_URL="https://example.com:6443"
API_SERVER_CA="ca.pem"
----

Then install the Fleet charts:

[source,bash]
----
helm repo add fleet https://rancher.github.io/fleet-helm-charts/
----

Install CustomResourceDefinitions:

[source,bash]
----
helm -n cattle-fleet-system install --create-namespace --wait \
    fleet-crd fleet/fleet-crd
----

Install Fleet controllers:

[source,bash]
----
helm -n cattle-fleet-system install --create-namespace --wait \
    --set apiServerURL="$API_SERVER_URL" \
    --set-file apiServerCA="$API_SERVER_CA" \
    fleet fleet/fleet
----

[#_verify]
=== Verify

[source,bash]
----
kubectl -n cattle-fleet-system logs -l app=fleet-controller
kubectl -n cattle-fleet-system get pods -l app=fleet-controller
----

[source,console]
----
NAME                                READY   STATUS    RESTARTS   AGE
fleet-controller-64f49d756b-n57wq   1/1     Running   0          3m21s
----

At this point, the Fleet manager should be ready.  
You can now xref:how-tos-for-operators/cluster-registration.adoc[register clusters] and xref:how-tos-for-users/gitrepo-add.adoc[add Git repositories].

